0.5.0 to 0.5.1
\-----------------------------------
Jimmy Zhou <jimmyzhou@users.sourceforge.net>
	* Bug Fixes:
		1. Compile error at rxvt_free_clipping (screen.c) when XFT
		   support is not enabled.
		2. Fix typo in acute acent. Thanks to Benedikt Magnusson
		   for the bug report.

Gautam Iyer <gi1242@users.sourceforge.net>
	* Bug Fixes:
		1. Macros now ignore the state of caps lock (as they should).
		2. The highlight flag is now set even if the tabbar is hidden (so
		   showing the tabbar will show which tab produced the beep).
		3. Macros without modifiers did not work. Fixed this.
		4. Ignore SIGHUP (caused exit when parent shell is killed).
		5. Ignore SIGPIPE (caused exit when print command crashes).
		6. Some Xft fonts, e.g., aquafont, report double the actual width.
           This cause some text being clustered together while the cursor
           and user input have double size. Test, and correct for this.
           Notice that this fix will work for fontconfig 2.3.2 (as we have
           tested) or later version, and you must run ``fc-cache -f'' after
           upgrading fontconfig. It will not work for fontconfig 2.2.3 and
		   earlier versions due to the bug of fontconfig.
		7. Also dump initial tab titles when the --cmdInitTabs options are
		   given (this used to cause incorrect behaviour when the user closes
		   tab 0, and opens a new tab).

	* Enhancements:
		1. Warn if closing mrxvt with multiple tabs (and the tabbar is
		   hidden).

0.4.2 to 0.5.0
\-----------------------------------
Gautam Iyer <gi1242@users.sourceforge.net>
	* Bug Fixes:
		1. Bug #1301269: Make ACS graphics / line drawing characters work
		   under Xft.
		2. Bug #1337635: Made ColorBD/HL work under Xft.
		3. Fixed pseudo-transparency when the root background is tiled on the
		   desktop.
		4. Numerous fixes to options to match the documentation (see CVS
		   logs).
		5. Partially fixed "transparentForce" option (see man page).
		6. Enabled pointer blank under Xft.